--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'Murs Gothic Wide';
+  src: url('./fonts/Murs Gothic Wide.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Murs Gothic Wide';
+  src: url('./fonts/Murs Gothic Wide.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -28,6 +44,12 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #242424;
+  background-image: url('./img/background.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 h1 {
