--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,8 @@ body {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  transform: translateZ(0);
+  will-change: auto;
 }
 
 h1 {
